--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advance Portfolio</title>
+    <title>Silpi's Web</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/f89ab922a5.js" crossorigin="anonymous"></script> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>  
+        <nav>
+            <span class="logo"><a href=""><img src="Images/Background.png" alt=""></a></span>
+            <span class="nam"><a href="">Silpi Akr</a></span>
+            <span class="at">
+            <a href="">Home <i class="fa-solid fa-caret-up"></i></a>
+            <a href="">About</a>
+            <a href="">Service</a>
+            <a href="">Project</a>
+            <a href="">Blog <i class="fa-solid fa-caret-up"></i></a>
+            <a href="">Contact</a>
+            </span>
+            <span class="logo"><a href=""><i class="fa-sharp fa-solid fa-bars fa-2xl" style="color: #000000;"></i></a></span>
+        </nav>
+       </header>
 </body>
 </html>
