--- a/index.html
+++ b/index.html
@@ -26,5 +26,26 @@
             <span class="logo"><a href=""><i class="fa-sharp fa-solid fa-bars fa-2xl" style="color: #000000;"></i></a></span>
         </nav>
        </header>
+       <div class="content">
+        <div class="box1">
+            <h1>HI, I'1M SILPI! <br>CREATIVE <span class="de">DESIGNER</span></h1>
+            <P>I'm a passionate UI/UX designer with a mission to create delightful and intuitive digital experiences. With a strong foundation in design principles and a keen eye for detail, I specialize in translating complex ideas into user-friendly interfaces that captivate and engage.</P>
+            <div class="boxs">
+            <a href="" class="bt">Download CV</a>
+            <a href=""><span class="fa-plays"><i class="fa-solid fa-play fa-lg" style="color: #0d0d0d;"></i></span> Watch The Video</a>
+            
+            </div>
+        </div>
+        <div class="box2">
+            <img src="Images/Background (4).png" alt="">
+        </div>
+       </div>
+       <div class="content1">
+        <div class="cd">
+         <h2>MY SERIVCE</h2>
+         <h1>Crafting stories through
+             design and innovation</h1>
+        </div>
+    </div>
 </body>
 </html>
