--- a/index.html
+++ b/index.html
@@ -47,5 +47,22 @@
              design and innovation</h1>
         </div>
     </div>
+    <div class="content2">
+        <div class="box3">
+            <img src="Images/13.png" alt="">
+            <h2>WEBSITE DESIGN</h2>
+            <p>Nemo design enim ipsam voluptatem quim voluptas sit aspernaturaut odit auting fugit sed thisnquia consequuntur magni doloreseos designer heresm qui</p>
+        </div>
+        <div class="box3">
+            <img src="Images/12.png" alt="">
+            <h2>LOGO DESIGN</h2>
+            <p>Nemo design enim ipsam voluptatem quim voluptas sit aspernaturaut odit auting fugit sed thisnquia consequuntur magni doloreseos designer heresm qui</p>
+        </div>
+        <div class="box3">
+            <img src="Images/14.png" alt="" class="png">
+            <h2>APPS DEVELOPMENT</h2>
+            <p>Nemo design enim ipsam voluptatem quim voluptas sit aspernaturaut odit auting fugit sed thisnquia consequuntur magni doloreseos designer heresm qui</p>
+        </div>
+       </div>
 </body>
 </html>
