--- a/index.html
+++ b/index.html
@@ -64,5 +64,61 @@
             <p>Nemo design enim ipsam voluptatem quim voluptas sit aspernaturaut odit auting fugit sed thisnquia consequuntur magni doloreseos designer heresm qui</p>
         </div>
        </div>
+       <div class="content3">
+        <div class="box4"> 
+                <div class="boxx1">
+                <h2>About Me</h2>
+                <h1>Transforming visions into
+                exceptional portfolios</h1>
+            </div>
+            <div class="boxx2">
+                <div class="c3b1"></div>
+                <div class="c3b2">
+                    <p>Nemo design enim ipsam voluptatem quim voluptas sit aspernatur aut odit auting fugit sed thisnquia consequuntur magni dolores eos designer heresm qui ratione</p>
+                    <a href="">Download CV <i class="fa-solid fa-download"></i></a> 
+                </div>
+            </div>
+            
+        </div>
+        <div class="box4">
+            <div class="boxdiv">
+                <div class="inner">
+                    <img src="Images/design.png" alt="">
+                    <a href="">Daily activity
+                        <p>Lorem is ipsum </p>
+                    </a>
+                </div>
+            </div>        
+        </div>
+       </div>
+       <div class="content4">
+            <div class="c4box1">
+               <h1><span class="ds">Design</span> and Innovation</h1>
+               <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit auting fugit sed thisnquia consequuntur magni dolores eos designer heresm qui ratione voluptatem sequi nesciuNeque porro quisquam est, oursqui dolorem ipsum quia dolor sit amet consectetur, adipisci velit, sed quia non numquam</p>
+               <div class="innerdiv">
+                    <div class="indiv">
+                        <img src="Images/Background (10).png" alt="">
+                        <h1>10k+</h1>
+                        <p>Complete project</p>
+                    </div>
+                    <div class="indiv">
+                        <img src="Images/Background (11).png" alt="" class="png1">
+                        <h1>800+</h1>
+                        <p>Client review</p>
+                    </div>
+               </div>
+            </div>
+            <div class="c4box2">
+                <h1>GET TOUCH ME?</h1>
+                <p>For your car we will do everything advice design in us repairs and maintenance We are the some preferred.</p>
+                <form action="" class="Form">
+                    <input type="text" placeholder="Your Name" required>
+                    <input type="text" placeholder="Your Email" required>
+                    <input type="number" placeholder="Phone Number" required>
+                    <input type="text" placeholder="Message">
+                    <input type="submit" value="Submit Now">
+                </form>
+            </div>
+       </div>
 </body>
 </html>
