--- a/index.html
+++ b/index.html
@@ -120,5 +120,52 @@
                 </form>
             </div>
        </div>
+       <div class="contents">
+        <div class="contents1">
+            <h2>EDUCATION & SKILL</h2>
+            <h1>Showcasing your talent vamplifying your impact</h1>
+        </div>
+        
+        <div class="content5">
+            <div class="c5inner">
+                <div class="inner1">2014 - 2018</div>
+                <h1>WordPress and End Developer</h1>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed thisnquia consequuntur magni dolores eos qui ratione voluptatem</p>
+            </div>
+            <div class="c5inner">
+                <div class="inner1">2012 - 2014</div>
+                <h1>Python Developer</h1>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed thisnquia consequuntur magni dolores eos qui ratione voluptatem</p>
+            </div>
+            <div class="c5inner">
+                <div class="inner1">2005 - 2009</div>
+                <h1>Kent State University</h1>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed thisnquia consequuntur magni dolores eos qui ratione voluptatem</p>
+            </div>
+            <div class="c5inner">
+                <div class="inner1">2009 - 2012</div>
+                <h1>User Experience Design</h1>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed thisnquia consequuntur magni dolores eos qui ratione voluptate</p>
+            </div>
+            <div class="c5inners"><h3>Python</h3>
+                <div class="anime"></div>
+            </div>
+            <div class="c5inners"><h3>HTML</h3>
+                <div class="anime"></div>
+            </div>
+            <div class="c5inners"><h3>CSS</h3>
+                <div class="anime"></div>
+            </div>
+            <div class="c5inners"><h3>Photoshop</h3>
+                <div class="anime"></div>
+            </div>
+            <div class="c5inners"><h3>Java Script</h3>
+                <div class="anime"></div>
+            </div>
+            <div class="c5inners"><h3>Figma</h3>
+                <div class="anime"></div>
+            </div>
+        </div>
+   </div>
 </body>
 </html>
