--- a/index.html
+++ b/index.html
@@ -167,5 +167,28 @@
             </div>
         </div>
    </div>
+   <div class="content6">
+    <div class="contentbox">
+        <h2>MY RECENT PORTFOLIO</h2>
+        <h1>Elevate your brand to new
+        heights with our portfolio expertise</h1>
+    </div>
+    <div class="imgDiv1">
+        <div class=" imgDivs">
+            <img src="Images/1.jpg" alt=""> 
+        </div>
+        <div class=" imgDiv">
+            <img src="Images/2.jpg" alt="">   
+        </div>
+    </div>
+    <div class="imgDiv2">
+        <div class="imgDiv">
+            <img src="Images/5.png" alt=""> 
+        </div>
+        <div class="imgDivss">
+            <img src="Images/4.jpg" alt=""> 
+        </div>
+    </div>
+</div>
 </body>
 </html>
