--- a/index.html
+++ b/index.html
@@ -190,5 +190,38 @@
         </div>
     </div>
 </div>
+<div class="content7">
+    <div class="content7boxs">
+        <h2>CLIENTS REVIEW</h2>
+        <h1>My testomonial</h1>
+    </div>
+        <div class="cont7InnerBox">
+            <div class="content7InnerBox">
+                <a href=""><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i></a>
+                
+                <h3>Armin Van Buuren</h3>
+                <p>CONTENT MANAGER</p>
+                <P>Beautiful minimalist design and great, fast response <br> with support. Highly recommend. Thanks Marketify <i class="fa-solid fa-quote-right fa-2xl" style="color: #29d188;"></i></P>
+            </div>
+            <div class="content7InnerBox">
+                <a href=""><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i></a>
+                <h3>Alexander Walker</h3>
+                <p>GRAPHIC DESIGNER</p>
+                <P>Beautiful minimalist design and great, fast response <br> with support. Highly recommend. Thanks Marketify <i class="fa-solid fa-quote-right fa-2xl" style="color: #29d188;"></i></P>
+            </div>
+            <div class="content7InnerBox">
+                <a href=""><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-regular fa-star fa-lg" style="color: #fbc604;"></i></a>
+                <h3>Armin Van Buuren</h3>
+                <p>CONTENT MANAGER</p>
+                <P>Beautiful minimalist design and great, fast response <br>with support. Highly recommend. Thanks Marketify <i class="fa-solid fa-quote-right fa-2xl" style="color: #29d188;"></i></P>
+            </div>
+            <div class="content7InnerBox">
+                <a href=""><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i><i class="fa-solid fa-star fa-lg" style="color: #fbc604;"></i></a>
+                <h3>Alexander Walker</h3>
+                <p>GRAPHIC DESIGNER</p>
+                <P>Beautiful minimalist design and great, fast response <br>with support. Highly recommend. Thanks Marketify <i class="fa-solid fa-quote-right fa-2xl" style="color: #29d188;"></i></P>
+            </div>
+        </div>
+   </div>
 </body>
 </html>
