--- a/index.html
+++ b/index.html
@@ -223,5 +223,65 @@
             </div>
         </div>
    </div>
+   <div class="scrollDiv">
+    <div class="scrollDivs">
+        <h1> *WORLD </h1>
+    </div>
+    <div class="scrollDivs">
+        <h1> *DEVELOPMENT </h1>
+    </div>
+    <div class="scrollDivs">
+        <h1> *PHP </h1>
+    </div>
+    <div class="scrollDivs">
+        <h1> *PYTHON</h1>
+    </div>MBlog
+    <div class="scrollDivs">
+        <h1> *DESIGN </h1>
+    </div>     
+</div>
+<div class="myBlogs">
+    <h1>MY BLOG</h1>
+    <div class="MBlog">
+        <h2>Unlocking the potential of your
+        personal brand</h2>
+        <a href="">More Blog +</a>
+    </div>
+</div>
+<div class="myBlog">
+    <div class="myBlogImages">
+        <img src="Images/list_2.jpg" alt="">
+        <div class="myblogtext">
+            <a href="" class="anquor">October 18, 2023</a>
+            <div class="mybloga">
+                <a href=""><i class="fa-solid fa-circle-user"></i> By Silpi Akr</a>
+                <a href=""><i class="fa-regular fa-comments"></i>  Comments(0)</a>
+            </div>
+            <h2>The standard personal My portfolio</h2>
+        </div>
+    </div>
+    <div class="myBlogImages">
+        <img src="Images/list_1.jpg" alt="">
+        <div class="myblogtext">
+            <a href="" class="anquor">October 18, 2023</a>
+            <div class="mybloga">
+                <a href=""><i class="fa-solid fa-circle-user"></i> By Silpi Akr</a>
+                <a href=""><i class="fa-regular fa-comments"></i>  Comments(0)</a>
+            </div>
+            <h2>Empowering your business with innovative solutions</h2>
+        </div>
+    </div>
+    <div class="myBlogImages">
+        <img src="Images/list_3.jpg" alt="">
+        <div class="myblogtext">
+        <a href="" class="anquor" >October 18, 2023</a>
+        <div class="mybloga">
+            <a href=""><i class="fa-solid fa-circle-user"></i> By Silpi Akr</a>
+            <a href=""><i class="fa-regular fa-comments"></i> Comments(1)</a>
+        </div>
+        <h2>The standard personal My portfolio</h2>
+        </div>
+    </div>
+</div>
 </body>
 </html>
