--- a/index.html
+++ b/index.html
@@ -283,5 +283,43 @@
         </div>
     </div>
 </div>
+<div class="SubButton">
+    <div class="SubBtns">
+         <h2>SUBSCRIBE MY NEWSLETTER</h2>
+         <div class="Notify">
+             <input type="text" placeholder="Enter Your Email" required>
+             <a href="" class="NotificationBtn">Notify Now</a>
+         </div>
+    </div>
+</div>
+<div class="ldiv">
+ <div class="footers">
+     <div class="footer1">
+         <a href=""><i class="fa-solid fa-street-view"></i></a>
+     </div>
+     <div class="footer2">
+         <h2>Address</h2>
+         <p>2118 Thornridge Cir. Syracuse, Connecticut 35624</p>
+     </div>
+ </div>
+ <div class="footers">
+     <div class="footer1">
+         <a href=""><i class="fa-solid fa-phone-volume"></i></a>
+     </div>
+     <div class="footer2">
+         <h2>Lets talk us</h2>
+         <p>+880-1756-543255</p>
+     </div>
+ </div>
+ <div class="footers">
+     <div class="footer1">
+         <a href=""><i class="fa-solid fa-envelope"></i></a>
+     </div>
+     <div class="footer2">
+         <h2>Send us email</h2>
+         <p>Email:silpiakr@gmail.com</p>
+     </div>
+ </div>
+</div>
 </body>
 </html>
