--- a/index.html
+++ b/index.html
@@ -321,5 +321,11 @@
      </div>
  </div>
 </div>
+<footer>
+    <p>&copy Programming Queens 2023 | All Rights Reserved</p>
+    <p>Trams & Condition</p>
+    <p>Privacy Policy</p>
+    <p>Sitemap</p>
+   </footer>
 </body>
 </html>
