--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>  
         <nav>
-            <span class="logo"><a href=""><img src="Images/Background.png" alt=""></a></span>
+            <span class="logo"><a href=""><img src="images/Background.png" alt=""></a></span>
             <span class="nam"><a href="">Silpi Akr</a></span>
             <span class="at">
             <a href="">Home <i class="fa-solid fa-caret-up"></i></a>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="box2">
-            <img src="Images/Background (4).png" alt="">
+            <img src="images/spic.png" alt="">
         </div>
        </div>
        <div class="content1">
@@ -49,17 +49,17 @@
     </div>
     <div class="content2">
         <div class="box3">
-            <img src="Images/13.png" alt="">
+            <img src="images/13.png" alt="">
             <h2>WEBSITE DESIGN</h2>
             <p>Nemo design enim ipsam voluptatem quim voluptas sit aspernaturaut odit auting fugit sed thisnquia consequuntur magni doloreseos designer heresm qui</p>
         </div>
         <div class="box3">
-            <img src="Images/12.png" alt="">
+            <img src="images/12.png" alt="">
             <h2>LOGO DESIGN</h2>
             <p>Nemo design enim ipsam voluptatem quim voluptas sit aspernaturaut odit auting fugit sed thisnquia consequuntur magni doloreseos designer heresm qui</p>
         </div>
         <div class="box3">
-            <img src="Images/14.png" alt="" class="png">
+            <img src="images/14.png" alt="" class="png">
             <h2>APPS DEVELOPMENT</h2>
             <p>Nemo design enim ipsam voluptatem quim voluptas sit aspernaturaut odit auting fugit sed thisnquia consequuntur magni doloreseos designer heresm qui</p>
         </div>
@@ -83,7 +83,7 @@
         <div class="box4">
             <div class="boxdiv">
                 <div class="inner">
-                    <img src="Images/design.png" alt="">
+                    <img src="images/design.png" alt="">
                     <a href="">Daily activity
                         <p>Lorem is ipsum </p>
                     </a>
@@ -97,12 +97,12 @@
                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit auting fugit sed thisnquia consequuntur magni dolores eos designer heresm qui ratione voluptatem sequi nesciuNeque porro quisquam est, oursqui dolorem ipsum quia dolor sit amet consectetur, adipisci velit, sed quia non numquam</p>
                <div class="innerdiv">
                     <div class="indiv">
-                        <img src="Images/Background (10).png" alt="">
+                        <img src="images/Background (10).png" alt="">
                         <h1>10k+</h1>
                         <p>Complete project</p>
                     </div>
                     <div class="indiv">
-                        <img src="Images/Background (11).png" alt="" class="png1">
+                        <img src="images/Background (11).png" alt="" class="png1">
                         <h1>800+</h1>
                         <p>Client review</p>
                     </div>
@@ -175,18 +175,18 @@
     </div>
     <div class="imgDiv1">
         <div class=" imgDivs">
-            <img src="Images/1.jpg" alt=""> 
+            <img src="images/1.jpg" alt=""> 
         </div>
         <div class=" imgDiv">
-            <img src="Images/2.jpg" alt="">   
+            <img src="images/2.jpg" alt="">   
         </div>
     </div>
     <div class="imgDiv2">
         <div class="imgDiv">
-            <img src="Images/5.png" alt=""> 
+            <img src="images/5.png" alt=""> 
         </div>
         <div class="imgDivss">
-            <img src="Images/4.jpg" alt=""> 
+            <img src="images/4.jpg" alt=""> 
         </div>
     </div>
 </div>
@@ -250,7 +250,7 @@
 </div>
 <div class="myBlog">
     <div class="myBlogImages">
-        <img src="Images/list_2.jpg" alt="">
+        <img src="images/list_2.jpg" alt="">
         <div class="myblogtext">
             <a href="" class="anquor">October 18, 2023</a>
             <div class="mybloga">
@@ -261,7 +261,7 @@
         </div>
     </div>
     <div class="myBlogImages">
-        <img src="Images/list_1.jpg" alt="">
+        <img src="images/list_1.jpg" alt="">
         <div class="myblogtext">
             <a href="" class="anquor">October 18, 2023</a>
             <div class="mybloga">
@@ -272,7 +272,7 @@
         </div>
     </div>
     <div class="myBlogImages">
-        <img src="Images/list_3.jpg" alt="">
+        <img src="images/list_3.jpg" alt="">
         <div class="myblogtext">
         <a href="" class="anquor" >October 18, 2023</a>
         <div class="mybloga">
